--- a/app/src/main/res/layout/activity_grid_item.xml
+++ b/app/src/main/res/layout/activity_grid_item.xml
@@ -9,78 +9,58 @@
     android:background="@drawable/grid">
 
 
-<ScrollView
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-        <ImageView
-            android:layout_height="180dp"
-            android:layout_width="180dp"
-            android:layout_marginTop="27dp"
-            android:layout_centerHorizontal="true"
-            android:id="@+id/imageView"
-            android:src="@drawable/tel"/>
-        <TextView
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:textSize="30dp"
-            android:textStyle="normal|bold"
-            android:text="vintage phone"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="50dp"
-            android:gravity="center"
-            android:layout_below="@id/imageView"
-            android:id="@+id/griddata"/>
-        <TextView
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:textSize="30dp"
-            android:textStyle="normal|bold"
-            android:layout_marginLeft="150dp"
-            android:layout_marginRight="150dp"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="50dp"
-            android:gravity="center"
-            android:text="The  Vintage 10 telephone offers a retro touch to your home without sacrificing the quality of your communications"
-            android:layout_below="@id/griddata"
-            android:id="@+id/grid_description"/>
-        <TextView
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:textSize="30dp"
-            android:textStyle="normal|bold"
-            android:layout_marginLeft="150dp"
-            android:layout_marginRight="150dp"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="50dp"
-            android:gravity="center"
-            android:text="1500"
-            android:layout_below="@id/grid_description"
-            android:id="@+id/grid_price"/>
-
-        <TextView
-            android:id="@+id/ADDdetail"
-            android:layout_width="150dp"
-            android:layout_height="50dp"
-            android:layout_alignBottom="@id/grid_price"
-            android:layout_centerHorizontal="true"
-            android:textAlignment="center"
-            android:layout_marginStart="40dp"
-            android:layout_marginTop="40dp"
-            android:layout_marginEnd="40dp"
-            android:layout_marginBottom="-82dp"
-            android:textColor="@color/black"
-            android:textSize="20sp"
-            android:background="@color/blanc"
-            android:text="ADD to Cart" />
-
-    </LinearLayout>
 
 
-</ScrollView>
+
+            <ImageView
+                android:id="@+id/imageView"
+                android:layout_width="180dp"
+                android:layout_height="180dp"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="27dp"
+                android:src="@drawable/tel" />
+
+            <TextView
+                android:id="@+id/grid_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/imageView"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="50dp"
+                android:gravity="center"
+                android:text="vintage phone"
+                android:textSize="20dp"
+                android:textStyle="normal|bold" />
+
+
+
+            <TextView
+                android:id="@+id/grid_price"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/grid_name"
+                android:layout_centerHorizontal="true"
+                android:layout_marginLeft="150dp"
+                android:layout_marginTop="50dp"
+                android:layout_marginRight="50dp"
+                android:gravity="center"
+                android:text="1500 DT"
+                android:textSize="15dp"
+                android:textStyle="normal|bold" />
+
+            <TextView
+                android:id="@+id/ADDdetail"
+                android:layout_width="150dp"
+                android:layout_height="50dp"
+                android:layout_alignBottom="@id/grid_price"
+                android:layout_centerHorizontal="true"
+                android:layout_marginBottom="-92dp"
+                android:background="@color/blanc"
+                android:text="ADD to Cart"
+                android:textAlignment="center"
+                android:textSize="20sp" />
+
+
 
 
 
