--- a/app/src/main/res/layout/row_data.xml
+++ b/app/src/main/res/layout/row_data.xml
@@ -1,12 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     >
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="190dp"
-        android:layout_height="180dp"
+        android:layout_height="190dp"
+        android:orientation="vertical"
         android:id="@+id/gridviewdata">
+        <ImageView
+            android:id="@+id/images"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:layout_centerInParent="true"
+            android:src="@drawable/tel"
+            android:background="@drawable/grid"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -19,13 +28,19 @@
             />
 
 
-        <ImageView
-            android:id="@+id/images"
-            android:layout_width="90dp"
-            android:layout_height="90dp"
-            android:layout_centerInParent="true"
-            android:src="@drawable/tel"
-            android:background="@drawable/grid"/>
 
-    </RelativeLayout>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/prix_product"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:text="388"
+            android:textStyle="normal|bold"
+            android:textSize="18dp"
+            />
+
+
+    </LinearLayout>
 </RelativeLayout>
