--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -19,10 +19,10 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/b1"
+            android:id="@+id/btn_article"
             android:textSize="28dp"
             android:text="Nos articles "
-            android:layout_marginTop="300dp"
+            android:layout_marginTop="200dp"
             android:textAlignment="center"
             android:layout_gravity="center_horizontal"
             android:background="@drawable/bouton"
@@ -31,17 +31,37 @@
             />
 
         <TextView
-            android:id="@+id/b"
+            android:id="@+id/btn_store"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="400dp"
+            android:layout_marginTop="300dp"
             android:text="Notre store  "
             android:textSize="28dp"
             android:textAlignment="center"
             android:background="@drawable/bouton"
             android:textColor="@color/black"
-
-
+            />
+        <TextView
+            android:id="@+id/btn_camera"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="400dp"
+            android:text="Camera"
+            android:textSize="28dp"
+            android:textAlignment="center"
+            android:background="@drawable/bouton"
+            android:textColor="@color/black"
+            />
+        <TextView
+            android:id="@+id/btn_deconnexion"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="500dp"
+            android:text="Deconnexion"
+            android:textSize="28dp"
+            android:textAlignment="center"
+            android:background="@drawable/bouton"
+            android:textColor="@color/black"
             />
 
     </RelativeLayout>
