--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -12,24 +12,24 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/title"
-        android:text="Login"
+        android:text="Connexion"
         android:textSize="50dp"
         android:layout_gravity="center"
         android:textColor="@color/blanc"
         android:textStyle="bold"
         android:layout_marginTop="150dp"
-        android:layout_marginLeft="150dp"
+        android:layout_marginLeft="100dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         />
 
 
     <EditText
-        android:id="@+id/email_signin"
+        android:id="@+id/edt_email_signIn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="80dp"
-        android:hint="Email"
+        android:hint="Adresse email"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         app:layout_constraintTop_toBottomOf="@id/title"
@@ -37,13 +37,13 @@
         android:textSize="20dp" />
 
     <EditText
-        android:id="@+id/password_signin"
+        android:id="@+id/edt_pass_signIn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
         android:fontFamily="sans-serif-light"
         android:hint="Mot de passe"
-        app:layout_constraintTop_toBottomOf="@id/email_signin"
+        app:layout_constraintTop_toBottomOf="@id/edt_email_signIn"
         android:inputType="textPassword"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
@@ -51,7 +51,7 @@
 
 
     <TextView
-        android:id="@+id/btSignIn"
+        android:id="@+id/btn_signIn_login"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
@@ -60,22 +60,22 @@
         android:layout_marginBottom="5dp"
         android:layout_margin="50dp"
         android:textSize="20dp"
-        app:layout_constraintTop_toBottomOf="@id/password_signin"
+        app:layout_constraintTop_toBottomOf="@id/edt_pass_signIn"
         android:textAlignment="center"
         android:background="@drawable/bouton"
-        android:text="Sign in"
+        android:text="Connexion"
         android:textColor="@color/black" />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Create an account"
+        android:text="Créer un compte"
         android:textColor="@color/white"
         android:textStyle="bold"
         android:layout_marginTop="40dp"
         android:textSize="20dp"
-        app:layout_constraintTop_toBottomOf="@id/btSignIn"
-        app:layout_constraintLeft_toLeftOf="@id/btSignIn"
-        android:id="@+id/btn_register"
+        app:layout_constraintTop_toBottomOf="@id/btn_signIn_login"
+        app:layout_constraintLeft_toLeftOf="@id/btn_signIn_login"
+        android:id="@+id/btn_register_signIn"
         android:background="@color/blanc"
         android:layout_gravity="center"/>
 
