--- a/app/src/main/res/layout/row_data.xml
+++ b/app/src/main/res/layout/row_data.xml
@@ -7,6 +7,7 @@
     <LinearLayout
         android:layout_width="190dp"
         android:layout_height="190dp"
+        android:layout_marginLeft="30dp"
         android:orientation="vertical"
         android:id="@+id/gridviewdata">
         <ImageView
