--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,68 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_gravity="center_horizontal"
-    tools:context=".Home"
-    android:background="@drawable/image">
-    <RelativeLayout
+    tools:context=".Home">
+
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/botton_navigation"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:alpha="0.8"
-            android:background="@drawable/gardient_bg"
-            />
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/btn_article"
-            android:textSize="28dp"
-            android:text="Nos articles "
-            android:layout_marginTop="200dp"
-            android:textAlignment="center"
-            android:layout_gravity="center_horizontal"
-            android:background="@drawable/bouton"
-            android:textColor="@color/black"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:background="@color/darkviolet"
+        app:itemIconSize="24dp"
+        app:menu="@menu/menu"
+        />
 
-            />
 
-        <TextView
-            android:id="@+id/btn_store"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="300dp"
-            android:text="Notre store  "
-            android:textSize="28dp"
-            android:textAlignment="center"
-            android:background="@drawable/bouton"
-            android:textColor="@color/black"
-            />
-        <TextView
-            android:id="@+id/btn_camera"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="400dp"
-            android:text="Camera"
-            android:textSize="28dp"
-            android:textAlignment="center"
-            android:background="@drawable/bouton"
-            android:textColor="@color/black"
-            />
-        <TextView
-            android:id="@+id/btn_deconnexion"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="500dp"
-            android:text="Deconnexion"
-            android:textSize="28dp"
-            android:textAlignment="center"
-            android:background="@drawable/bouton"
-            android:textColor="@color/black"
-            />
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/fragment_place_holder"
+        android:layout_above="@+id/botton_navigation"/>
 
-    </RelativeLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+
+</RelativeLayout>
