--- a/app/src/main/res/layout/activity_inscription.xml
+++ b/app/src/main/res/layout/activity_inscription.xml
@@ -1,120 +1,115 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".Home"
-    android:background="@drawable/login">
+    android:background="@drawable/login"
+    tools:context=".Inscription"
+    >
 
-<ScrollView
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <LinearLayout
+    <View
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/title"
-            android:text="Inscription"
-            android:textSize="50dp"
-            android:layout_gravity="center"
-            android:textColor="@color/blanc"
-            android:textStyle="bold"
-            android:layout_marginTop="150dp"
-
-            />
-
-        <EditText
-            android:id="@+id/edt_name_inscription"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Nom"
-            android:layout_marginTop="50dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:textSize="20dp"
-            app:layout_constraintTop_toBottomOf="@id/title"
-            />
-
-        <EditText
-            android:id="@+id/edt_email_inscription"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/edt_name_inscription"
-            android:hint="Adresse email"
-            android:layout_marginTop="50dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:inputType="textEmailAddress"
-            app:layout_constraintTop_toBottomOf="@id/edt_name_inscription"
-            android:textSize="20dp" />
-        <EditText
-            android:id="@+id/edt_pass_inscription"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/edt_email_inscription"
-            android:layout_marginTop="50dp"
-            android:hint="Mot de passe"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:inputType="textPassword"
-            app:layout_constraintTop_toBottomOf="@id/edt_email_inscription"
-            android:textSize="20dp" />
-        <EditText
-            android:id="@+id/edt_confirm_pass_inscription"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Confirme mot de passe"
-            android:layout_marginTop="50dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:inputType="textPassword"
-            app:layout_constraintTop_toBottomOf="@id/edt_pass_inscription"
-            android:textSize="20dp" />
+        android:alpha="0.8"
+        android:background="@drawable/gardient_bg"
+        />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/title"
+        android:text="Inscription"
+        android:textSize="50dp"
+        android:layout_gravity="center"
+        android:textColor="@color/darkviolet"
+        android:textStyle="bold"
+        android:layout_marginTop="50dp"
+        android:layout_marginLeft="80dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        />
 
 
+    <EditText
+        android:id="@+id/edt_name_inscription"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="80dp"
+        android:hint="Nom"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        app:layout_constraintTop_toBottomOf="@id/title"
+        android:textSize="20dp" />
+
+    <EditText
+        android:id="@+id/edt_email_inscription"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="80dp"
+        android:hint="Adresse email"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        app:layout_constraintTop_toBottomOf="@id/edt_name_inscription"
+        android:inputType="textEmailAddress"
+        android:textSize="20dp" />
 
 
-        <TextView
-            android:id="@+id/btn_signUp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:textAlignment="center"
-            android:textSize="20dp"
-            android:background="@drawable/bouton"
-            android:text="Inscription"
-            android:layout_marginTop="50dp"
-            app:layout_constraintTop_toBottomOf="@id/edt_confirm_pass_inscription"
-            android:textColor="@color/black"
+    <EditText
+        android:id="@+id/edt_pass_inscription"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:fontFamily="sans-serif-light"
+        android:hint="Mot de passe"
+        app:layout_constraintTop_toBottomOf="@id/edt_name_inscription"
+        android:inputType="textPassword"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:textSize="20dp" />
 
-            />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/btn_signIn_inscription"
-            android:text="Connecter, si vous avez un compte "
-            android:textSize="20dp"
-            android:layout_marginTop="30dp"
-            android:textColor="@color/white"
-            android:layout_gravity="center"
-            android:background="@color/blanc"
-            app:layout_constraintTop_toBottomOf="@id/btn_signUp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:textStyle="bold"/>
-
-    </LinearLayout>
-
-</ScrollView>
+    <EditText
+        android:id="@+id/edt_confirm_pass_inscription"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="80dp"
+        android:hint="Confirme votre mot de passe"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        app:layout_constraintTop_toBottomOf="@id/edt_pass_inscription"
+        android:inputType="textPassword"
+        android:textSize="20dp" />
 
 
 
+    <TextView
+        android:id="@+id/btn_signUp_inscription"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        android:layout_marginLeft="50dp"
+        android:layout_marginRight="150dp"
+        android:padding="10dp"
+        android:textSize="20dp"
+        app:layout_constraintTop_toBottomOf="@id/edt_confirm_pass_inscription"
+        android:textAlignment="center"
+        android:background="@drawable/bouton"
+        android:text="Inscription"
+        android:textColor="@color/black" />
+    <TextView
+        android:id="@+id/btn_signIn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="J'au un compte"
+        android:textStyle="bold"
+        android:layout_marginTop="50dp"
+        android:textSize="18dp"
+        app:layout_constraintTop_toBottomOf="@id/btn_signUp_inscription"
+        app:layout_constraintLeft_toRightOf="@id/btn_signUp_inscription"
+        android:textColor="@color/black"
+        android:textColorHint="@color/darkviolet"
+        />
 
 
 
-
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
