--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,7 +7,12 @@
     android:background="@drawable/login"
     tools:context=".Login">
 
-
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:alpha="0.8"
+        android:background="@drawable/gardient_bg"
+        />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -15,10 +20,10 @@
         android:text="Connexion"
         android:textSize="50dp"
         android:layout_gravity="center"
-        android:textColor="@color/blanc"
+        android:textColor="@color/darkviolet"
         android:textStyle="bold"
-        android:layout_marginTop="150dp"
-        android:layout_marginLeft="100dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginLeft="80dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         />
@@ -40,7 +45,7 @@
         android:id="@+id/edt_pass_signIn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="20dp"
         android:fontFamily="sans-serif-light"
         android:hint="Mot de passe"
         app:layout_constraintTop_toBottomOf="@id/edt_email_signIn"
@@ -54,11 +59,10 @@
         android:id="@+id/btn_signIn_login"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
         android:layout_marginTop="50dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginBottom="5dp"
-        android:layout_margin="50dp"
+        android:layout_marginLeft="50dp"
+        android:layout_marginRight="150dp"
+        android:padding="15dp"
         android:textSize="20dp"
         app:layout_constraintTop_toBottomOf="@id/edt_pass_signIn"
         android:textAlignment="center"
@@ -66,18 +70,18 @@
         android:text="Connexion"
         android:textColor="@color/black" />
     <TextView
+        android:id="@+id/btn_register_signIn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Créer un compte"
-        android:textColor="@color/white"
         android:textStyle="bold"
-        android:layout_marginTop="40dp"
-        android:textSize="20dp"
+        android:layout_marginTop="50dp"
+        android:textSize="18dp"
         app:layout_constraintTop_toBottomOf="@id/btn_signIn_login"
-        app:layout_constraintLeft_toLeftOf="@id/btn_signIn_login"
-        android:id="@+id/btn_register_signIn"
-        android:background="@color/blanc"
-        android:layout_gravity="center"/>
+        app:layout_constraintLeft_toRightOf="@id/btn_signIn_login"
+        android:textColor="@color/black"
+        android:textColorHint="@color/darkviolet"
+       />
 
 
 
