--- a/app/src/main/res/layout/fragment_store.xml
+++ b/app/src/main/res/layout/fragment_store.xml
@@ -4,11 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".StoreMap">
-    <fragment
+    tools:context=".StoreFragment"
+    android:background="@drawable/grid">
+
+    <GridView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/map"
-        android:name="com.google.android.gms.maps.SupportMapFragment"/>
+        android:layout_height="wrap_content"
+        android:id="@+id/grid"
+        android:horizontalSpacing="1dp"
+        android:numColumns="2">
+    </GridView>
+
 
 </RelativeLayout>
