--- a/app/src/main/res/layout/row_data.xml
+++ b/app/src/main/res/layout/row_data.xml
@@ -7,22 +7,25 @@
     <LinearLayout
         android:layout_width="190dp"
         android:layout_height="190dp"
-        android:layout_marginLeft="30dp"
+        android:layout_marginLeft="15dp"
         android:orientation="vertical"
         android:id="@+id/gridviewdata">
+
         <ImageView
             android:id="@+id/images"
             android:layout_width="90dp"
             android:layout_height="90dp"
-            android:layout_centerInParent="true"
-            android:src="@drawable/tel"
-            android:background="@drawable/grid"/>
+            android:layout_gravity="center"
+            android:layout_marginTop="10dp"
+            android:src="@drawable/tel" />
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/name_product"
+            android:layout_gravity="center"
             android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
+            android:layout_marginTop="10dp"
             android:text="Télephone vintage"
             android:textStyle="normal|bold"
             android:textSize="18dp"
@@ -35,8 +38,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/prix_product"
-            android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
+            android:layout_gravity="center"
+            android:layout_marginTop="10dp"
             android:text="388"
             android:textStyle="normal|bold"
             android:textSize="18dp"
