--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,7 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="blanc">#957DAD</color>
+    <color name="darkviolet">#957DAD</color>
     <color name="violet">#EAE0E3</color>
 
 </resources>
